welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:21: error: ':' expected but ',' found.
def faireMotif(y,r,b,g)
                ^MethodsPicture:45: error: identifier expected but '}' found.
} 
^