welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def faireV(c:Color)
	{setCouleurBrosse(c)
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	recule()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()}

def faireMotif(y,r,b,g)
	{faireV(y)
	faireV(r)
	faireV(b)
	faireV(g)}

def faireLigne()
	{for (i <- 1 to 3)
		{faireMotif(Color.YELLOW , Color.RED , Color.BLUE , Color.GREEN)
		avance()
		avance()
		avance()
		avance()
		avance()}
		gauche()
		avance()
		avance()
		avance()
		avance()
		avance()
		droite()}

for (i <- 1 to 3)
	{faireLigne()}
}